# platform.core.security.privacy-guard

./: CMakeLists.txt  LICENSE.APLv2  privacy-guard-client.pc.in
client/: CMakeLists.txt
client/inc/: PrivacyChecker.h  PrivacyGuardClient.h  SocketClient.h  privacy_guard_client_internal.h
client/src/: PrivacyChecker.cpp  PrivacyGuardClient.cpp  SocketClient.cpp  privacy_guard_client.cpp  privacy_guard_client_internal_types.h
common/inc/: IPrivacyGuard.h  PrivacyGuardCommon.h  PrivacyGuardTypes.h  PrivacyIdInfo.h  SocketConnection.h  SocketStream.h  Utils.h
common/src/: PrivacyIdInfo.cpp  SocketStream.cpp  Utils.cpp
include/: CMakeLists.txt  privacy_guard_client.h  privacy_guard_client_types.h
packaging/: privacy-guard-server.service  privacy-guard-server.socket  privacy-guard.spec
pkgmgr_plugin/: CMakeLists.txt  privileges.cpp
res/etc/rc.d/init.d/: privacy-guard-server.sh
server/: CMakeLists.txt
server/inc/: CynaraService.h  ICommonDb.h  NotificationServer.h  PrivacyGuardDaemon.h  PrivacyGuardDb.h  PrivacyInfoService.h  SocketService.h  privacy_guard_daemon.h
server/src/: CMakeLists.txt  CynaraService.cpp  NotificationServer.cpp  PrivacyGuardDaemon.cpp  PrivacyGuardDb.cpp  SocketService.cpp  main.cpp  privacy_guard_daemon.cpp
server/src/service/: PrivacyInfoService.cpp
