CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
#PROJECT(privacy-guard-client)

SET(PF_INCLUDE_PATH ${PROJECT_SOURCE_DIR}/include)

SET(PRIVACY_GUARD_CLIENT_HEADERS
	${PF_INCLUDE_PATH}/privacy_guard_client.h
	${PF_INCLUDE_PATH}/privacy_guard_client_types.h
	)

INSTALL(FILES ${PRIVACY_GUARD_CLIENT_HEADERS} DESTINATION ${INCLUDE_INSTALL_DIR}/privacy_guard)
